--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,8 @@
 {
+    "name": "jbrunner/mett.io",
+    "description": "Some mett.io",
+    "type": "library",
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
         "ext-mcrypt": "*"
